[FIX] laypout overflow content width

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,6 +15,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+p {
+  margin: 0 !important;
+}
+
 .bg-image {
   background-position: center;
   background-repeat: no-repeat;
